force-app/main/default/objects/CBK_Framework_Batch__c/CBK_Framework_Batch__c.object-meta.xml
<CustomObject>
    <label>Framework Batch</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Framework Batch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>