force-app/main/default/objects/CBK_Framework_Batch__c/fields/Calc_NextExec__c.field-meta.xml
<CustomField>
    <fullName>Calc_NextExec__c</fullName>
    <label>Cálculo siguiente ejecución</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>SCHED</fullName>
                <label>Según fecha de última planificación</label>
            </value>
            <value>
                <fullName>END</fullName>
                <default>true</default>
                <label>Según última fecha de fin de ejecución</label>
            </value>
            <value>
                <fullName>INI</fullName>
                <label>Según última fecha de inicio ejecución</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>