force-app/main/default/objects/CBK_Framework_Batch__c/fields/CBK_PublishedEventDate__c.field-meta.xml
<CustomField>
    <fullName>CBK_PublishedEventDate__c</fullName>
    <description>Fecha en la que el evento se ha publicado, utilizada para el seguimiento de la ejecución de eventos pendientes</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Fecha en la que el evento se ha publicado, utilizada para el seguimiento de la ejecución de eventos pendientes</inlineHelpText>
    <label>Fecha de Publicación de Evento</label>
    <type>DateTime</type>
</CustomField>