force-app/main/default/objects/CBK_Framework_Batch__c/fields/CBK_PurgeProcessId__c.field-meta.xml
<CustomField>
    <fullName>CBK_PurgeProcessId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Framework Purgado</label>
    <referenceTo>CBK_PurgeProcess__c</referenceTo>
    <relationshipLabel>Framework Batch</relationshipLabel>
    <relationshipName>Framework_Batch</relationshipName>
    <type>Lookup</type>
</CustomField>