force-app/main/default/objects/CBK_Framework_Batch__c/fields/Dependencia__c.field-meta.xml
<CustomField>
    <fullName>Dependencia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dependencia</label>
    <referenceTo>CBK_Framework_Batch__c</referenceTo>
    <relationshipLabel>Framework Batch</relationshipLabel>
    <relationshipName>Framework_Batch</relationshipName>
    <type>Lookup</type>
</CustomField>