force-app/main/default/objects/CBK_Framework_Batch__c/fields/Domingo__c.field-meta.xml
<CustomField>
    <fullName>Domingo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Domingo</label>
    <type>Checkbox</type>
</CustomField>