force-app/main/default/objects/CBK_Framework_Batch__c/fields/Email_Notif__c.field-meta.xml
<CustomField>
    <fullName>Email_Notif__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Notificación</label>
    <type>Email</type>
</CustomField>