force-app/main/default/objects/CBK_Framework_Batch__c/fields/JobPath__c.field-meta.xml
<CustomField>
    <fullName>JobPath__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>JobPath</label>
    <length>255</length>
    <type>Text</type>
</CustomField>