force-app/main/default/objects/CBK_Framework_Batch__c/fields/LastExec_End__c.field-meta.xml
<CustomField>
    <fullName>LastExec_End__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fin Última Ejecución</label>
    <type>DateTime</type>
</CustomField>