force-app/main/default/objects/CBK_Framework_Batch__c/fields/LastExec_Sched__c.field-meta.xml
<CustomField>
    <fullName>LastExec_Sched__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Planificación Última Ejecución</label>
    <type>DateTime</type>
</CustomField>