force-app/main/default/objects/CBK_Framework_Batch__c/fields/LastExec_Status__c.field-meta.xml
<CustomField>
    <fullName>LastExec_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Estado Última Ejecución</label>
    <length>30</length>
    <type>Text</type>
</CustomField>