force-app/main/default/objects/CBK_Framework_Batch__c/fields/Lunes__c.field-meta.xml
<CustomField>
    <fullName>Lunes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lunes</label>
    <type>Checkbox</type>
</CustomField>