force-app/main/default/objects/CBK_Framework_Batch__c/fields/NextExec__c.field-meta.xml
<CustomField>
    <fullName>NextExec__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Próxima Ejecución</label>
    <type>DateTime</type>
</CustomField>