force-app/main/default/objects/CBK_Framework_Batch__c/fields/Notif__c.field-meta.xml
<CustomField>
    <fullName>Notif__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notificar errores</label>
    <type>Checkbox</type>
</CustomField>