force-app/main/default/objects/CBK_Framework_Batch__c/fields/params__c.field-meta.xml
<CustomField>
    <fullName>params__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Parámetros</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>