force-app/main/default/objects/CBK_Framework_Batch__c/fields/Periodicidad__c.field-meta.xml
<CustomField>
    <fullName>Periodicidad__c</fullName>
    <label>Periodicidad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>