force-app/main/default/objects/CBK_Framework_Batch__c/fields/Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Proyecto__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Proyecto</label>
    <length>30</length>
    <type>Text</type>
</CustomField>