force-app/main/default/objects/CBK_Framework_Batch__c/fields/runningJobId__c.field-meta.xml
<CustomField>
    <fullName>runningJobId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Job en ejecución</label>
    <length>18</length>
    <type>Text</type>
</CustomField>