force-app/main/default/objects/CBK_Framework_Batch__c/fields/Sabado__c.field-meta.xml
<CustomField>
    <fullName>Sabado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sábado</label>
    <type>Checkbox</type>
</CustomField>