force-app/main/default/objects/CBK_Framework_Batch__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Estado</label>
    <length>15</length>
    <type>Text</type>
</CustomField>