force-app/main/default/objects/CBK_Framework_Batch__c/fields/Tipo_de_periodicidad__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_periodicidad__c</fullName>
    <label>Tipo de periodicidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minutos</fullName>
            </value>
            <value>
                <fullName>Horas</fullName>
            </value>
            <value>
                <fullName>Dias</fullName>
                <label>Días</label>
            </value>
            <value>
                <fullName>Meses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>