force-app/main/default/objects/CBK_Framework_Batch__c/fields/Viernes__c.field-meta.xml
<CustomField>
    <fullName>Viernes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Viernes</label>
    <type>Checkbox</type>
</CustomField>