force-app/main/default/objects/CBK_Framework_Batch__c/validationRules/Periodico_Dias.validationRule-meta.xml
<ValidationRule>
    <fullName>Periodico_Dias</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				TEXT(Tipo__c) =&apos;Periodico&apos;,
				Activo__c,    
				NOT(OR(
								 Lunes__c,
								 Martes__c, 
								 Miercoles__c, 
								 Jueves__c, 
								 Viernes__c, 
								 Sabado__c,
								 Domingo__c
								)
						)
				)</errorConditionFormula>
    <errorDisplayField>Lunes__c</errorDisplayField>
    <errorMessage>Deben seleccionarse los días de ejecución</errorMessage>
</ValidationRule>