force-app/main/default/objects/CBK_Framework_Batch__c/validationRules/Periodico_Periodicidad.validationRule-meta.xml
<ValidationRule>
    <fullName>Periodico_Periodicidad</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				TEXT(Tipo__c) =&apos;Periodico&apos;,
				ISNULL(Periodicidad__c)
)</errorConditionFormula>
    <errorDisplayField>Periodicidad__c</errorDisplayField>
    <errorMessage>Debe informarse la periodicidad</errorMessage>
</ValidationRule>