force-app/main/default/objects/CBK_Framework_Batch__c/validationRules/Periodico_TipoPeriodicidad.validationRule-meta.xml
<ValidationRule>
    <fullName>Periodico_TipoPeriodicidad</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
					TEXT(Tipo__c) =&apos;Periodico&apos;,
				 TEXT(Tipo_de_periodicidad__c) = &apos;&apos;
)</errorConditionFormula>
    <errorDisplayField>Tipo_de_periodicidad__c</errorDisplayField>
    <errorMessage>Debe informarse el tipo de periodicidad</errorMessage>
</ValidationRule>