force-app/main/default/objects/CBK_Framework_Batch__c/validationRules/Priority.validationRule-meta.xml
<ValidationRule>
    <fullName>Priority</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( Priority__c =0, TEXT(Tipo__c) =&apos;Periodico&apos;)</errorConditionFormula>
    <errorDisplayField>Priority__c</errorDisplayField>
    <errorMessage>Prioridad 0 solo permitido para ejecuciones no periódicas</errorMessage>
</ValidationRule>