force-app/main/default/objects/CBK_Framework_Batch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Class_Name__c</columns>
    <columns>Orden__c</columns>
    <columns>Priority__c</columns>
    <columns>NextExec__c</columns>
    <columns>Tipo__c</columns>
    <columns>runningJobId__c</columns>
    <columns>Proyecto__c</columns>
    <columns>Periodicidad__c</columns>
    <columns>Tipo_de_periodicidad__c</columns>
    <columns>Activo__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>