force-app/main/default/objects/CBK_Framework_Batch__c/listViews/Cola.listView-meta.xml
<ListView>
    <fullName>Cola</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Class_Name__c</columns>
    <columns>Orden__c</columns>
    <columns>Priority__c</columns>
    <columns>NextExec__c</columns>
    <columns>Tipo__c</columns>
    <columns>runningJobId__c</columns>
    <columns>Proyecto__c</columns>
    <columns>Periodicidad__c</columns>
    <columns>Tipo_de_periodicidad__c</columns>
    <columns>Activo__c</columns>
    <columns>Dependencia__c</columns>
    <columns>UsuarioContexto__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Orden__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>runningJobId__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Cola</label>
</ListView>